# sensors_sensor

./: .clang-format  CODEOWNERS  OAT.xml  README.md  README_zh.md  bundle.json  developer  hisysevent.yaml  sensor.gni
frameworks/cj/: BUILD.gn
frameworks/cj/include/: cj_sensor_ffi.h  cj_sensor_impl.h  cj_sensor_visibility.h
frameworks/cj/src/: cj_sensor_ffi.cpp  cj_sensor_impl.cpp
frameworks/ets/taihe/: BUILD.gn
frameworks/ets/taihe/idl/: ohos.sensor.taihe
frameworks/ets/taihe/user/: main.ets
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/include/: async_callback_info.h  sensor_js.h  sensor_napi_error.h  sensor_napi_utils.h  sensor_system_js.h
frameworks/js/napi/src/: sensor_js.cpp  sensor_napi_error.cpp  sensor_napi_utils.cpp  sensor_system_js.cpp
frameworks/native/: BUILD.gn  ISensorService.idl
frameworks/native/include/: fd_listener.h  geomagnetic_field.h  i_sensor_client.h  i_sensor_service.h  native_sensor_impl.h  sensor_agent_proxy.h  sensor_algorithm.h  sensor_client_proxy.h  sensor_client_stub.h  sensor_data_channel.h  sensor_event_handler.h  sensor_file_descriptor_listener.h  sensor_service_client.h  sensor_service_load.h  sensor_service_proxy.h  sensors_ipc_interface_code.h
frameworks/native/sensor/: BUILD.gn
frameworks/native/sensor/include/: fd_listener.h  i_sensor_service.h  my_file_descriptor_listener.h  sensor_agent_proxy.h  sensor_client_proxy.h  sensor_client_stub.h  sensor_data_channel.h  sensor_event_handler.h  sensor_file_descriptor_listener.h  sensor_service_client.h  sensor_service_proxy.h  sensors_ipc_interface_code.h
frameworks/native/sensor/src/: fd_listener.cpp  my_event_handler.cpp  my_file_descriptor_listener.cpp  sensor_agent_proxy.cpp  sensor_algorithm.cpp  sensor_client_stub.cpp  sensor_data_channel.cpp  sensor_file_descriptor_listener.cpp  sensor_service_client.cpp  sensor_service_proxy.cpp
frameworks/native/src/: fd_listener.cpp  geomagnetic_field.cpp  native_sensor.cpp  sensor_agent.cpp  sensor_agent_proxy.cpp  sensor_algorithm.cpp  sensor_client_stub.cpp  sensor_data_channel.cpp  sensor_event_handler.cpp  sensor_file_descriptor_listener.cpp  sensor_service_client.cpp  sensor_service_load.cpp  sensor_service_proxy.cpp
interfaces/native/test/: BUILD.gn
interfaces/plugin/: BUILD.gn
interfaces/plugin/include/: async_callback_info.h  sensor_js.h  sensor_napi_error.h  sensor_napi_log.h  sensor_napi_utils.h  sensor_system_js.h
interfaces/plugin/src/: sensor_js.cpp  sensor_napi_error.cpp  sensor_napi_utils.cpp  sensor_system_js.cpp
interfaces/plugin/test/: ExampleJsunit.test_acc.js  ExampleJsunit.test_ambientlight.js  ExampleJsunit.test_gravity.js  ExampleJsunit.test_magnetic.js  ExampleJsunit.test_orientating.js  ExampleJsunit.test_pedometer.js  ExampleJsunit.test_rotatingvector.js  ExampleJsunit.test_system.js
rust/utils/socket_ipc_rust_ffi/: BUILD.gn
services/: BUILD.gn
services/include/: client_info.h  fifo_cache_data.h  flush_info_record.h  sensor_common_event_subscriber.h  sensor_data_block_policy.h  sensor_data_manager.h  sensor_data_processer.h  sensor_dump.h  sensor_manager.h  sensor_observer.h  sensor_power_policy.h  sensor_service.h  sensor_service_proxy.h  sensor_service_stub.h  sensor_shake_control_manager.h  stream_server.h
services/sensor/: BUILD.gn
services/sensor/include/: client_info.h  fifo_cache_data.h  flush_info_record.h  sensor_data_processer.h  sensor_dump.h  sensor_manager.h  sensor_power_policy.h  sensor_service.h  sensor_service_proxy.h  sensor_service_stub.h  stream_server.h
services/sensor/src/: client_info.cpp  fifo_cache_data.cpp  flush_info_record.cpp  sensor_client_stub.cpp  sensor_data_processer.cpp  sensor_dump.cpp  sensor_manager.cpp  sensor_power_policy.cpp  sensor_service.cpp  sensor_service_stub.cpp  sensor_suspend_policy.cpp  stream_server.cpp
services/src/: client_info.cpp  fifo_cache_data.cpp  flush_info_record.cpp  sensor_common_event_subscriber.cpp  sensor_data_block_policy.cpp  sensor_data_manager.cpp  sensor_data_processer.cpp  sensor_dump.cpp  sensor_manager.cpp  sensor_observer.cpp  sensor_power_policy.cpp  sensor_service.cpp  sensor_service_stub.cpp  sensor_shake_control_manager.cpp  stream_server.cpp
test/fuzztest/services/: BUILD.gn
test/unittest/coverage/: BUILD.gn  report_data_callback_test.cpp  sensor_basic_data_channel_test.cpp  sensor_data_block_policy_test.cpp  sensor_data_manager_test.cpp  sensor_motion_revision_test.cpp  sensor_shake_control_manager_test.cpp
utils/: BUILD.gn
utils/common/: BUILD.gn
utils/common/include/: active_info.h  app_sensor.h  app_thread_info.h  death_recipient_template.h  miscdevice_common.h  motion_plugin.h  permission_util.h  print_sensor_data.h  report_data_callback.h  security_privacy_manager_plugin.h  sensor.h  sensor_basic_data_channel.h  sensor_basic_info.h  sensor_channel_info.h  sensor_data_event.h  sensor_delayed_sp_singleton.h  sensor_errors.h  sensor_log.h  sensor_parcel.h  sensor_utils.h  sensor_xcollie.h  sensors_errors.h  subscribe_info.h
utils/common/src/: active_info.cpp  app_sensor.cpp  motion_plugin.cpp  permission_util.cpp  print_sensor_data.cpp  report_data_callback.cpp  security_privacy_manager_plugin.cpp  sensor.cpp  sensor_basic_data_channel.cpp  sensor_basic_info.cpp  sensor_channel_info.cpp  sensor_xcollie.cpp  subscribe_info.cpp
utils/include/: app_thread_info.h  permission_util.h  report_data_callback.h  sensor.h  sensor_basic_data_channel.h  sensor_basic_info.h  sensor_catalog.h  sensor_channel_info.h  sensor_data_event.h  sensor_log.h  sensor_trace.h  sensors_errors.h
utils/ipc/: BUILD.gn
utils/ipc/include/: circle_stream_buffer.h  net_packet.h  proto.h  rust_binding.h  stream_buffer.h  stream_client.h  stream_session.h  stream_socket.h
utils/ipc/src/: circle_stream_buffer.cpp  net_packet.cpp  stream_buffer.cpp  stream_client.cpp  stream_session.cpp  stream_socket.cpp
utils/src/: dmd_report.cpp  miscdevice_common.cpp  permission_util.cpp  report_data_callback.cpp  sensor.cpp  sensor_basic_data_channel.cpp  sensor_basic_info.cpp  sensor_channel_info.cpp
(+413 files in other folders)
