# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/sensors"
ohos_shared_library("libsensor_utils") {
  sources = [
    "src/dmd_report.cpp",
    "src/miscdevice_common.cpp",
    "src/permission_util.cpp",
    "src/report_data_callback.cpp",
    "src/sensor.cpp",
    "src/sensor_basic_data_channel.cpp",
    "src/sensor_basic_info.cpp",
    "src/sensor_channel_info.cpp",
  ]

  include_dirs = [
    "include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//drivers/peripheral/sensor/interfaces/include",
    "$SUBSYSTEM_DIR/sensor/interfaces/native/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include/message_parcel.h",
  ]

  external_deps = [
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]
  part_name = "sensor"
  subsystem_name = "sensors"
}

group("sensor_utils_target") {
  deps = [ ":libsensor_utils" ]
}
