# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#import("//build/config/ohos/rules.gni")
import("//build/ohos.gni")
ohos_shared_library("sensor") {
  include_dirs = [
    "//third_party/node/src",
    "//native_engine",
    "../native/include",
    "//third_party/libuv/include",
    "//utils/native/base/include",
    "./include",
  ]
  defines = [
    "APP_LOG_TAG = \"sensroJs\"",
    "LOG_DOMAIN = 0xD002700",
  ]
  sources = [
    "./src/sensor_js.cpp",
    "./src/sensor_napi_utils.cpp",
  ]
  deps = [ "../native:sensor_interface_native" ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "napi:ace_napi",
    "utils_base:utils",
  ]
  relative_install_dir = "module"
  part_name = "sensor"
  subsystem_name = "sensors"
}

group("sensor_js_target") {
  deps = [ ":sensor" ]
}
