# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./../../../sensor.gni")

ohos_shared_library("libsensor") {
  include_dirs = [
    "$SUBSYSTEM_DIR/frameworks/native/include",
    "$SUBSYSTEM_DIR/interfaces/inner_api",
    "$SUBSYSTEM_DIR/frameworks/js/napi/include",
    "$SUBSYSTEM_DIR/utils/common/include",
  ]
  defines = [
    "APP_LOG_TAG = \"sensorJs\"",
    "LOG_DOMAIN = 0xD002700",
  ]
  sources = [
    "src/sensor_js.cpp",
    "src/sensor_napi_error.cpp",
    "src/sensor_napi_utils.cpp",
    "src/sensor_system_js.cpp",
  ]
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  deps = [ "$SUBSYSTEM_DIR/frameworks/native:sensor_interface_native" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
  ]
  relative_install_dir = "module"
  part_name = "sensor"
  subsystem_name = "sensors"
}

group("sensor_js_target") {
  deps = [ ":libsensor" ]
}
