# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./../../../sensor.gni")

ohos_shared_library("libsensor_native") {
  sources = [
    "src/fd_listener.cpp",
    "src/sensor_agent_proxy.cpp",
    "src/sensor_client_stub.cpp",
    "src/sensor_data_channel.cpp",
    "src/sensor_event_handler.cpp",
    "src/sensor_file_descriptor_listener.cpp",
    "src/sensor_service_client.cpp",
    "src/sensor_service_proxy.cpp",
  ]

  include_dirs = [
    "$SUBSYSTEM_DIR/frameworks/native/sensor/include",
    "$SUBSYSTEM_DIR/interfaces/native/include",
    "$SUBSYSTEM_DIR/utils/common/include",
    "$SUBSYSTEM_DIR/utils/ipc/include",
  ]

  defines = sensor_default_defines

  deps = [
    "$SUBSYSTEM_DIR/utils/common:libsensor_utils",
    "$SUBSYSTEM_DIR/utils/ipc:libsensor_ipc",
  ]

  if (rust_socket_ipc) {
    deps +=
        [ "$SUBSYSTEM_DIR/rust/utils/socket_ipc_rust_ffi:sensor_rust_util_ffi" ]
  }

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "sensor"
  subsystem_name = "sensors"
}

group("sensor_native_target") {
  deps = [ ":libsensor_native" ]
}
