# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

group("fuzztest") {
  testonly = true
  deps = [
    "createdatachannelstub_fuzzer:fuzztest",
    "createsocketchannelstub_fuzzer:fuzztest",
    "destroydatachannelstub_fuzzer:fuzztest",
    "destroysocketchannelstub_fuzzer:fuzztest",
    "disableactiveinfocbstub_fuzzer:fuzztest",
    "enableactiveinfocbstub_fuzzer:fuzztest",
    "getactiveinfoliststub_fuzzer:fuzztest",
    "getallsensorsstub_fuzzer:fuzztest",
    "resetsensorsstub_fuzzer:fuzztest",
    "resumesensorsstub_fuzzer:fuzztest",
    "sensordisablestub_fuzzer:fuzztest",
    "sensorenablestub_fuzzer:fuzztest",
    "sensoronremoterequest_fuzzer:fuzztest",
    "service/createsocketchannel_fuzzer:fuzztest",
    "service/destroysensorchannel_fuzzer:fuzztest",
    "service/getactiveinfolist_fuzzer:fuzztest",
    "service/onstart_fuzzer:fuzztest",
    "service/processdeathobserver_fuzzer:fuzztest",
    "service/registerclientdeathrecipient_fuzzer:fuzztest",
    "service/registerpermcallback_fuzzer:fuzztest",
    "service/reportactiveinfo_fuzzer:fuzztest",
    "service/reportonchangedata_fuzzer:fuzztest",
    "service/reportsensorsysevent_fuzzer:fuzztest",
    "service/transferdatachannel_fuzzer:fuzztest",
    "suspendsensorsstub_fuzzer:fuzztest",
  ]
}
