# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("./../../../sensor.gni")

ohos_unittest("SensorBasicDataChannelTest") {
  module_out_path = "sensor/sensor/coverage"

  sources = [
    "$SUBSYSTEM_DIR/test/unittest/coverage/sensor_basic_data_channel_test.cpp",
  ]

  include_dirs = [
    "$SUBSYSTEM_DIR/utils/common/include",
    "$SUBSYSTEM_DIR/interfaces/kits/c",
    "$SUBSYSTEM_DIR/frameworks/native/include",
    "$SUBSYSTEM_DIR/interfaces/inner_api",
  ]

  deps = [
    "$SUBSYSTEM_DIR/frameworks/native:libsensor_client",
    "$SUBSYSTEM_DIR/frameworks/native:ohsensor",
    "$SUBSYSTEM_DIR/utils/common:libsensor_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

ohos_unittest("ReportDataCallbackTest") {
  module_out_path = "sensor/sensor/coverage"

  sources =
      [ "$SUBSYSTEM_DIR/test/unittest/coverage/report_data_callback_test.cpp" ]

  include_dirs = [
    "$SUBSYSTEM_DIR/utils/common/include",
    "$SUBSYSTEM_DIR/interfaces/kits/c",
    "$SUBSYSTEM_DIR/frameworks/native/include",
    "$SUBSYSTEM_DIR/interfaces/inner_api",
  ]

  deps = [
    "$SUBSYSTEM_DIR/frameworks/native:libsensor_client",
    "$SUBSYSTEM_DIR/frameworks/native:ohsensor",
    "$SUBSYSTEM_DIR/utils/common:libsensor_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
  ]
}

ohos_unittest("SensorDataManagerTest") {
  module_out_path = "sensor/sensor/coverage"
  sources = ["$SUBSYSTEM_DIR/test/unittest/coverage/sensor_data_manager_test.cpp"]
  defines = sensor_default_defines
  include_dirs = [
    "${target_gen_dir}",
    "$SUBSYSTEM_DIR/utils/common/include",
    "$SUBSYSTEM_DIR/services/include",
  ]

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  deps = [
    "$SUBSYSTEM_DIR/services:libsensor_service_static",
  ]

  external_deps = [
    "c_utils:utils",
    "data_share:datashare_consumer",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("SensorShakeControlManagerTest") {
  module_out_path = "sensor/sensor/coverage"

  sources =
      [ "$SUBSYSTEM_DIR/test/unittest/coverage/sensor_shake_control_manager_test.cpp" ]

  include_dirs = [
    "$SUBSYSTEM_DIR/utils/common/include",
    "$SUBSYSTEM_DIR/services/include",
  ]

  deps = [
    "$SUBSYSTEM_DIR/services:libsensor_service_static",
    "$SUBSYSTEM_DIR/utils/common:libsensor_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "init:libbeget_proxy",
  ]
}

group("unittest") {
  testonly = true
  deps = [
    ":ReportDataCallbackTest",
    ":SensorBasicDataChannelTest",
    ":SensorShakeControlManagerTest",
  ]
}
